# ai21-tokenizer

./: .gitignore  .pre-commit-config.yaml  .yamllint.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  ci.sh  cloudbuild.yaml  init.sh  publish.sh  pyproject.toml  setup.py  tasks.py  verify.sh
.github/: CODEOWNERS  bump.yaml  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: publish.yaml  publish.yml  python-publish.yml  quality-checks.yml  release_version.yaml  semantic-pr.yaml  test.yaml
ai21_tokenizer/: __init__.py  base_jamba_instruct_tokenizer.py  base_jamba_tokenizer.py  base_jurassic_tokenizer.py  base_tokenizer.py  file_utils.py  jamaba_tokenizer.py  jamba_1_5_tokenizer.py  jamba_instruct_tokenizer.py  jamba_tokenizer.py  jurassic_tokenizer.py  tokenizer_factory.py  utils.py
ai21_tokenizer/resources/j2-tokenizer/: config.json
ci_scripts/: ci.sh
examples/: async_jamba_1_5_tokenizer.py  async_jamba_tokenizer.py  async_jurassic_tokenizer.py  jamba_1_5_tokenizer.py  jamba_tokenizer.py  jurassic_tokenizer.py  use_async_tokenizer.py  use_j2_tokenizer.py  use_tokenizer.py  use_tokenizer_async.py
jurassic_tokenization/: __init__.py  utils.py
jurassic_tokenization/resources/: j2-dictionary.args
tests/: conftest.py  test_jamba_1_5_tokenizer.py  test_jamba_tokenizer.py  test_jurassic_tokenizer.py  test_tokenizer_factory.py
tests/jurassic_tokenization/: test_sanity.py  test_tokenizer.py
tests/resources/: 200_tokenized_C4_val_docs.jsonl  special_toks_ids.json  vocab_size.json
tests/tokenizer/: test_jurassic_tokenizer.py  test_tokenizer_factory.py
tokenizer/: __init__.py  jurassic_tokenizer.py  tokenizer.py  tokenizer_factory.py
